--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,6 +1,5 @@
 .about-section {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
+  padding: 10rem 0 10rem 0;
   background: linear-gradient(to bottom, $dark-navy, $navy, $black);
   h2 {
     font-family: 'Advent Pro', sans-serif;
